@@ -274,14 +274,18 @@ config RTAI_SCHED_LXRT_NUMSLOTS
 	The maximum number of registrable objects in RTAI.
 
 config RTAI_MONITOR_EXECTIME
-	bool "Display RTAI task execution time (per thousand)"
+	bool "Track RTAI task execution times"
 	default y
 	help
-	If this option is enabled it is possible to see the time consumed by
-	hard real time tasks, in per thousand of the total time available, 
-	by using the RTAI scheduler proc file, e.g. "cat /proc/rtai/scheduler".
-	Since this option uses the TSC it is better to avoid it in production
-	for x86 CPUs not having TSCs, i.e. 486s and some untrue 586s.
+	If this option is enabled, RTAI will keep track of time consumed by
+	hard real time tasks.
+
+	** Since this option uses the TSC it is better to avoid it in production
+	for x86 CPUs not having TSCs, i.e. 486s and some untrue 586s. **
+
+	This option also enables display of execution time of tasks, per thousand
+	of the total time available, in the output of the RTAI scheduler proc file,
+	e.g. "cat /proc/rtai/scheduler".
 
 config RTAI_ALLOW_RR
 	bool "Allow round-robin scheduling"
