@@ -1,0 +1,28 @@
+#!/bin/sh
+
+prefix=`rtai-config --prefix`
+
+if [ "$prefix" == "" ]; then
+echo "ERROR: please set your PATH variable to <rtai-install>/bin"
+exit
+fi
+
+libpath=`rtai-config --library-dir`
+ 
+export LD_LIBRARY_PATH=$libpath:$LD_LIBRARY_PATH
+
+MODULES=$prefix/modules
+
+if [ $UID != 0 ]; then SUDO="sudo "; else SUDO=""; fi
+echo
+echo "*** EXECTIME (user) ***"
+echo "Press <enter> to load modules:"
+read junk
+cd ..; ./ldmod; cd -
+echo "Now start the realtime process <enter>,"
+read junk
+$SUDO ./exectime
+echo
+echo "Done. Press <enter> to remove the modules."
+read junk
+./rem
