@@ -1,12 +1,14 @@
 2012-12-10 Shahbaz Youssefi <shahbaz.youssefi@unige.it>
 
-	* configure.in: modified for build against new libc versions.
-	* base/math/GNUmakefile.am: modified for build against new libc
+	* configure.in: modified for build against new glibc versions.
+	* base/math/GNUmakefile.am: modified for build against new glibc
 	  versions.
 	* base/include/rtai_rwl.h: fixed a missing nam2num in
 	  rt_named_rwl_init.
 	* base/include/rtai_spl.h: fixed a missing nam2num in
 	  rt_named_spl_init.
+	* base/sched: added rt_get_exectime for kernel (and updated for
+	  user) to give precise execution time.  Also added in showroom.
 
 2012-08-03 Mark Fortescue <mark@mtfhpc.demon.co.uk>
 
